NEW274677
WTF::SegmentedString::Substring has uninitialized fields when m_length == 0
https://bugs.webkit.org/show_bug.cgi?id=274677
Summary WTF::SegmentedString::Substring has uninitialized fields when m_length == 0
David Kilzer (:ddkilzer)
Reported 2024-05-24 12:34:37 PDT
WTF::SegmentedString::Substring has uninitialized fields when m_length == 0. Found by clang static analyzer.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-24 12:34:54 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-05-24 12:41:09 PDT
Note You need to log in before you can comment on or make changes to this bug.