Cherry-pick 279306@main (8bea440e85a6). https://bugs.webkit.org/show_bug.cgi?id=274677

WTF::SegmentedString::Substring has uninitialized fields when m_length == 0
    <https://bugs.webkit.org/show_bug.cgi?id=274677>
    <rdar://128696520>

    Reviewed by Yusuke Suzuki.

    * Source/WebCore/platform/text/SegmentedString.h:
    (WTF::SegmentedString::Substring):
    - Provide default values for currentCharacter8 and is8Bit.

    Canonical link: https://commits.webkit.org/279306@main

Canonical link: https://commits.webkit.org/274313.265@webkitglib/2.44